migrating to Neo4j 4.0: changed package names